<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/cancelimage" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancelprogrambooking"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/areyousure"
                android:textColor="@color/black"
                />


            <TextView
                android:id="@+id/txtNameofFest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="REPUBLIC DAY"
                android:padding="2dp"
                android:textColor="@color/black"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/programbooking"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/roundbtncancel"
                android:gravity="center"
                android:text="@string/yes"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/btnNo"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/roundbtnyellow"
                android:text="@string/no"

                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
