<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/appyellowclr"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/profileTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"

        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:textColorHint="@color/orange_app"
            >

            <EditText
                android:id="@+id/edUserNameUserInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/signinbtncolor"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailaddress"
            android:textColorHint="@color/orange_app"
            >

            <EditText
                android:id="@+id/edEmailUserInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/signinbtncolor"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:textColorHint="@color/orange_app"
            >

            <EditText
                android:id="@+id/edPhoneUserInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/signinbtncolor"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/orange_app"
            >

            <EditText
                android:id="@+id/edAddresUserInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/signinbtncolor"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                />


        </android.support.design.widget.TextInputLayout>





    </LinearLayout>



</RelativeLayout>